Fix alignment between top-level group titles and item titles

--- a/styles/forest.less
+++ b/styles/forest.less
@@ -295,7 +295,6 @@
       & > .forest-title {
         font-weight: var(--group-header-font-weight);
         font-size: var(--group-header-font-size);
-        margin-left: 0; // To align with the icons in child items
       }
 
       // Don't change the background color as if the group were a regular item
